[gd_scene load_steps=12 format=4 uid="uid://da4k7ar2nurxr"]

[ext_resource type="Texture2D" uid="uid://budnlstoj73dj" path="res://assets/Tiny Swords/Terrain/Ground/Tilemap_Elevation.png" id="1_8mc1v"]
[ext_resource type="Script" path="res://scripts/autobattler.gd" id="1_8ulbs"]
[ext_resource type="Texture2D" uid="uid://ce556y663787a" path="res://assets/Tiny Swords/Terrain/Ground/Tilemap_Flat.png" id="2_62mrr"]
[ext_resource type="Script" path="res://scripts/autobattler/unit_manager.gd" id="3_nc8on"]
[ext_resource type="PackedScene" uid="uid://dnxukncfg2tne" path="res://scenes/base.tscn" id="4_yrwcp"]
[ext_resource type="Script" path="res://scripts/unit_spawn_menu.gd" id="6_camvw"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_tcu65"]
vertices = PackedVector2Array(1542, 576.039, -407.742, 584.953, -402.242, 361.992, 1542, 361)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-412, 352, -418, 595, 1552, 586, 1552, 351)])

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ar2d0"]
texture = ExtResource("1_8mc1v")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSet" id="TileSet_0vadb"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_ar2d0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f4o7b"]
texture = ExtResource("2_62mrr")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0

[sub_resource type="TileSet" id="TileSet_6mj68"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_f4o7b")

[node name="AutobattlerRoot" type="Node2D"]
script = ExtResource("1_8ulbs")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 270.03)
zoom = Vector2(0.75, 0.75)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_tcu65")

[node name="Elevation" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAkAAQABAAMAAAACAAkAAQABAAMAAAADAAkAAQABAAMAAAAEAAkAAQABAAMAAAAFAAkAAQABAAMAAAAGAAkAAQABAAMAAAAHAAkAAQABAAMAAAAIAAkAAQABAAMAAAAJAAkAAQABAAMAAAAKAAkAAQABAAMAAAALAAkAAQABAAMAAAAMAAkAAQABAAMAAAANAAkAAQABAAMAAAAOAAkAAQABAAMAAAAPAAkAAQABAAMAAAAQAAkAAQABAAMAAAARAAkAAQABAAMAAAAAAAkAAQAAAAMAAAASAAkAAQACAAMAAAD//wkAAQABAAMAAAD//woAAQABAAMAAAAAAAoAAQABAAMAAAABAAoAAQABAAMAAAACAAoAAQAAAAUAAAADAAoAAQAAAAUAAAAEAAoAAQAAAAUAAAAFAAoAAQAAAAUAAAAGAAoAAQAAAAUAAAAHAAoAAQAAAAUAAAAIAAoAAQAAAAUAAAAJAAoAAQAAAAUAAAAKAAoAAQAAAAUAAAALAAoAAQAAAAUAAAAMAAoAAQAAAAUAAAANAAoAAQAAAAUAAAAOAAoAAQAAAAUAAAAPAAoAAQAAAAUAAAAQAAoAAQAAAAUAAAARAAoAAQAAAAUAAAASAAoAAQABAAMAAAASAAsAAQABAAMAAAARAAsAAQABAAMAAAAQAAsAAQAAAAUAAAAPAAsAAQAAAAUAAAAOAAsAAQAAAAUAAAANAAsAAQAAAAUAAAAMAAsAAQAAAAUAAAALAAsAAQAAAAUAAAAKAAsAAQAAAAUAAAAJAAsAAQAAAAUAAAAIAAsAAQAAAAUAAAAHAAsAAQAAAAUAAAAGAAsAAQAAAAUAAAAFAAsAAQAAAAUAAAAEAAsAAQAAAAUAAAADAAsAAQAAAAUAAAACAAsAAQAAAAUAAAABAAsAAQABAAMAAAAAAAsAAQABAAMAAAD//wsAAQABAAMAAAD+/wkAAQABAAMAAAD9/wkAAQABAAMAAAD8/wkAAQABAAMAAAD7/wkAAQABAAMAAAD6/wkAAQABAAMAAAD6/woAAQABAAMAAAD6/wsAAQABAAMAAAD7/wsAAQABAAMAAAD8/wsAAQABAAMAAAD9/wsAAQABAAMAAAD+/wsAAQABAAMAAAD+/woAAQABAAMAAAD9/woAAQABAAMAAAD8/woAAQABAAMAAAD7/woAAQABAAMAAAATAAkAAQABAAMAAAAUAAkAAQABAAMAAAAVAAkAAQABAAMAAAAWAAkAAQABAAMAAAAXAAkAAQABAAMAAAAXAAoAAQABAAMAAAAXAAsAAQABAAMAAAAWAAsAAQABAAMAAAAVAAsAAQABAAMAAAAUAAsAAQABAAMAAAATAAsAAQABAAMAAAATAAoAAQABAAMAAAAUAAoAAQABAAMAAAAVAAoAAQABAAMAAAAWAAoAAQABAAMAAAA=")
tile_set = SubResource("TileSet_0vadb")

[node name="Ground" type="TileMapLayer" parent="."]
position = Vector2(27, -40)
tile_map_data = PackedByteArray("AAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAALAAgAAQABAAEAAAAMAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAPAAgAAQABAAEAAAAQAAgAAQABAAEAAAAQAAcAAQABAAEAAAAPAAcAAQABAAEAAAAOAAcAAQABAAEAAAANAAcAAQABAAEAAAAMAAcAAQABAAEAAAALAAcAAQABAAEAAAAKAAcAAQABAAEAAAAJAAcAAQABAAEAAAAIAAcAAQABAAEAAAAHAAcAAQABAAEAAAAGAAcAAQABAAEAAAAFAAcAAQABAAEAAAAEAAcAAQABAAEAAAADAAcAAQABAAEAAAADAAgAAQABAAEAAAADAAkAAQABAAIAAAAEAAkAAQABAAIAAAAFAAkAAQABAAIAAAAGAAkAAQABAAIAAAAHAAkAAQABAAIAAAAIAAkAAQABAAIAAAAJAAkAAQABAAIAAAAKAAkAAQABAAIAAAALAAkAAQABAAIAAAAMAAkAAQABAAIAAAACAAcAAQABAAEAAAABAAcAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAACAAkAAQABAAIAAAABAAkAAQABAAIAAAAAAAkAAQABAAIAAAARAAcAAQABAAEAAAARAAgAAQABAAEAAAARAAkAAQABAAIAAAAQAAkAAQABAAIAAAAPAAkAAQABAAIAAAAOAAkAAQABAAIAAAANAAkAAQABAAIAAAD//wcAAQABAAEAAAD//wgAAQABAAEAAAD//wkAAQABAAIAAAD//wYAAQABAAAAAAARAAYAAQABAAAAAAAAAAYAAQABAAAAAAABAAYAAQABAAAAAAACAAYAAQABAAAAAAADAAYAAQABAAAAAAAEAAYAAQABAAAAAAAFAAYAAQABAAAAAAAGAAYAAQABAAAAAAAHAAYAAQABAAAAAAAIAAYAAQABAAAAAAAJAAYAAQABAAAAAAAKAAYAAQABAAAAAAALAAYAAQABAAAAAAAMAAYAAQABAAAAAAANAAYAAQABAAAAAAAOAAYAAQABAAAAAAAPAAYAAQABAAAAAAAQAAYAAQABAAAAAAD6/wYAAQABAAAAAAD7/wYAAQABAAAAAAD8/wYAAQABAAAAAAD9/wYAAQABAAAAAAD+/wYAAQABAAAAAAAWAAYAAQABAAAAAAAVAAYAAQABAAAAAAAUAAYAAQABAAAAAAATAAYAAQABAAAAAAASAAYAAQABAAAAAAD5/wYAAQAAAAAAAAAXAAYAAQACAAAAAAD5/wcAAQAAAAEAAAD5/wgAAQAAAAEAAAD5/wkAAQAAAAIAAAAXAAcAAQACAAEAAAAXAAgAAQACAAEAAAAXAAkAAQACAAIAAAD6/wkAAQABAAIAAAD7/wkAAQABAAIAAAD8/wkAAQABAAIAAAD9/wkAAQABAAIAAAD+/wkAAQABAAIAAAASAAkAAQABAAIAAAATAAkAAQABAAIAAAAUAAkAAQABAAIAAAAVAAkAAQABAAIAAAAWAAkAAQABAAIAAAD6/wcAAQABAAEAAAD6/wgAAQABAAEAAAD7/wgAAQABAAEAAAD8/wgAAQABAAEAAAD9/wgAAQABAAEAAAD+/wgAAQABAAEAAAD+/wcAAQABAAEAAAD9/wcAAQABAAEAAAD8/wcAAQABAAEAAAD7/wcAAQABAAEAAAASAAcAAQABAAEAAAATAAcAAQABAAEAAAAUAAcAAQABAAEAAAAVAAcAAQABAAEAAAAWAAcAAQABAAEAAAAWAAgAAQABAAEAAAAVAAgAAQABAAEAAAAUAAgAAQABAAEAAAATAAgAAQABAAEAAAASAAgAAQABAAEAAAA=")
tile_set = SubResource("TileSet_6mj68")

[node name="UnitManager" type="Node2D" parent="." node_paths=PackedStringArray("baseA", "baseB")]
y_sort_enabled = true
script = ExtResource("3_nc8on")
baseA = NodePath("../BaseA")
baseB = NodePath("../BaseB")

[node name="BaseA" parent="." node_paths=PackedStringArray("unit_spawn_area") instance=ExtResource("4_yrwcp")]
position = Vector2(-25, 414)
unit_spawn_area = NodePath("UnitSpawnArea/CollisionShape2D")

[node name="TeamComponent" parent="BaseA" index="4"]
team = 1

[node name="BaseB" parent="." node_paths=PackedStringArray("unit_spawn_area") instance=ExtResource("4_yrwcp")]
position = Vector2(1180, 414)
unit_spawn_area = NodePath("UnitSpawnArea/CollisionShape2D")

[node name="TeamComponent" parent="BaseB" index="4"]
team = 2

[node name="UnitSpawnMenu" type="Panel" parent="."]
offset_left = 476.0
offset_top = -156.0
offset_right = 676.0
offset_bottom = 2.0
script = ExtResource("6_camvw")

[node name="TeamA" type="VBoxContainer" parent="UnitSpawnMenu"]
layout_mode = 0
offset_right = 95.0
offset_bottom = 155.0

[node name="A3" type="Button" parent="UnitSpawnMenu/TeamA"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitA3"

[node name="A4" type="Button" parent="UnitSpawnMenu/TeamA"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitA4"

[node name="A5" type="Button" parent="UnitSpawnMenu/TeamA"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitA5"

[node name="A6" type="Button" parent="UnitSpawnMenu/TeamA"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitA6"

[node name="TeamB" type="VBoxContainer" parent="UnitSpawnMenu"]
layout_direction = 3
layout_mode = 0
offset_right = 97.0
offset_bottom = 153.0

[node name="B3" type="Button" parent="UnitSpawnMenu/TeamB"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitB3"

[node name="B4" type="Button" parent="UnitSpawnMenu/TeamB"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitB4"

[node name="B5" type="Button" parent="UnitSpawnMenu/TeamB"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitB5"

[node name="B6" type="Button" parent="UnitSpawnMenu/TeamB"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
focus_mode = 0
text = "unitB6"

[connection signal="give_modifier" from="BaseA" to="." method="_on_give_modifier"]
[connection signal="give_modifier" from="BaseB" to="." method="_on_give_modifier"]
[connection signal="pressed" from="UnitSpawnMenu/TeamA/A3" to="UnitSpawnMenu" method="_on_a_3_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamA/A4" to="UnitSpawnMenu" method="_on_a_4_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamA/A5" to="UnitSpawnMenu" method="_on_a_5_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamA/A6" to="UnitSpawnMenu" method="_on_a_6_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamB/B3" to="UnitSpawnMenu" method="_on_b_3_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamB/B4" to="UnitSpawnMenu" method="_on_b_4_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamB/B5" to="UnitSpawnMenu" method="_on_b_5_pressed"]
[connection signal="pressed" from="UnitSpawnMenu/TeamB/B6" to="UnitSpawnMenu" method="_on_b_6_pressed"]

[editable path="BaseA"]
[editable path="BaseB"]
